--- a/expo-curator/package.json
+++ b/expo-curator/package.json
@@ -17,11 +17,13 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
     "react-native-web": "~0.19.13",
+    "react-router-dom": "^5.3.4",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-router-dom": "^5.3.3",
     "typescript": "^5.3.3"
   },
   "private": true
